[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-hub-sdk"
version = "0.1.0"
description = "Skill Hub SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "FiftyK" }]
keywords = ["sdk", "skill-hub"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Repository = "https://gitlab.com/fiftyk/skill-hub-sdk"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skill_hub_sdk"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
strict = false
